# kkdf

./: README.md  pyproject.toml
kkdf/util/: com.py  function.py
tests/: conftest.py  df1.parquet  df1.pickle  df2.parquet  df2.pickle  df_col1.parquet  df_col2.parquet  test_bin.py  test_com.py  test_function.py
